syntax = "proto3";

package codesentry.analysis;

service AnalysisService {
  rpc AnalyzeCode(AnalyzeRequest) returns (AnalysisResponse);
  rpc GetPRAnalysis(GetPRAnalysisRequest) returns (PRAnalysisResponse);
  rpc GetAnalysisHistory(GetHistoryRequest) returns (HistoryResponse);
  rpc HealthCheck(HealthRequest) returns (HealthResponse);
}

message AnalyzeRequest {
  string code = 1;
  string language = 2;
  string file_path = 3;
  int32 pr_number = 4;
  string repository = 5;
  bool include_style_analysis = 6;
}

message AnalysisResponse {
  string analysis_id = 1;
  int64 timestamp = 2;
  int32 total_vulnerabilities = 3;
  int32 critical_count = 4;
  int32 high_count = 5;
  int32 medium_count = 6;
  int32 low_count = 7;
  repeated Vulnerability vulnerabilities = 8;
  repeated StyleIssue style_issues = 9;
  int32 total_style_issues = 10;
  map<string, int32> style_categories = 11;
  string status = 12;
  string language = 13;
}

message Vulnerability {
  string type = 1;
  string severity = 2;
  int32 line_number = 3;
  string code_snippet = 4;
  string description = 5;
  string recommendation = 6;
  float confidence = 7;
}

message StyleIssue {
  string type = 1;
  string category = 2;
  string severity = 3;
  int32 line = 4;
  int32 column = 5;
  string code = 6;
  string message = 7;
  string recommendation = 8;
}

message GetPRAnalysisRequest {
  int32 pr_number = 1;
  string repository = 2;
}

message PRAnalysisResponse {
  repeated AnalysisResponse analyses = 1;
  int32 total = 2;
}

message GetHistoryRequest {
  int32 limit = 1;
}

message HistoryResponse {
  repeated AnalysisResponse analyses = 1;
  int32 total = 2;
}

message HealthRequest {
}

message HealthResponse {
  string status = 1;
  string version = 2;
  int64 timestamp = 3;
}
